--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +34,17 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/volodin32104/react-app-movies.git"
+  },
+  "author": "andrew.s",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/volodin32104/react-app-movies/issues"
+  },
+  "homepage": "https://github.com/volodin32104/react-app-movies#readme"
 }
