--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "moviesproject",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://volodin32104.github.io/react-app-movies/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
@@ -15,7 +16,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -46,5 +49,8 @@
   "bugs": {
     "url": "https://github.com/volodin32104/react-app-movies/issues"
   },
-  "homepage": "https://github.com/volodin32104/react-app-movies#readme"
+  "homepage": "https://github.com/volodin32104/react-app-movies#readme",
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
+  }
 }
